--- a/style.css
+++ b/style.css
@@ -50,33 +50,22 @@ h2 {
 /* Style pour les images */
 
 img#profil{
-    position: absolute;
-    width: 220px;
-    height: auto;
-    top: 105px;
-    left: 1600px;
+    display: block;
+    width: 255px;
+    margin-left: auto;
+    margin-right: auto;
     border-radius: 10px 10px;
+}
+
+img#intermarche {
+    position: relative;
+    width: 250px;
 }
 
 img#point_p {
     position: relative;
-    width: 150px;
-    top: 40px;
-    border-radius: 10px 10px;
-}
-
-img#presse{
-    position: relative;
-    width: 110px;
-    top: 45px;
-    border-radius: 5px 5px;
-}
-
-img#cone{
-    position: relative;
-    width: 90px;
-    top: 40px;
-    border-radius: 5px 5px;
+    width: 180px;
+    padding: 15px;
 }
 
 img#reseau{
@@ -90,6 +79,13 @@ img#programme{
     position: relative;
     width: 600px;
     top: 10px;
+    border-radius: 10px 10px;
+}
+
+img#telephone {
+    position: relative;
+    width: 350px;
+    padding-top: 20px;
     border-radius: 10px 10px;
 }
 
@@ -113,6 +109,14 @@ img#plan{
     border-radius: 5px 5px;
 }
 
+img#ddos{
+    border-radius: 5px 5px;
+}
+
+img#scan_port{
+    border-radius: 5px 5px;
+}
+
 img#fibre{
     position: relative;
     width: 500px;
@@ -130,6 +134,15 @@ img#fibre_test{
 img#liste{
     position: relative;
     width: 180px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    border-radius: 10px 10px;
+}
+
+img#sudoku {
+    position: relative;
+    width: 400px;
+    padding-top: 15px;
     border-radius: 10px 10px;
 }
 
@@ -202,8 +215,6 @@ a#linkedin:hover{
 a#linkedin:visited{
     color: #8C8C8C;
 }
-
-
 
 /* style pour chaque section */
 section {
